--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body::before {
       rgba(204, 43, 94, 0.5),
       rgba(117, 58, 136, 0.9)
     ),
-    url("./img/bg.webp");
+    url("../img/bg.webp");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
